# GTstore

./: .gitignore  CMakeLists.txt  README.md  consistent_hash_ring.h  gt_client.cpp  gt_client.h  gt_manager.cpp  gt_manager.h  gt_object.h  gt_storage_node.cpp  gt_storage_node.h  test_client_init.cpp  test_client_stroage_node.cpp  test_consistent_hash_ring.cpp  test_gt_manager.cpp  test_gt_nodes.cpp  test_gt_socket_manager.cpp  test_gt_store.cpp
